--- a/src/css/input.css
+++ b/src/css/input.css
@@ -5,7 +5,9 @@
 /* custom css animations */
 
 * {
-  transition: background-color 0.2s, color 0.2s, border-color 0.2s;
+  transition-property: background-color, color, border-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
 }
 
 @keyframes fadeIn {
@@ -41,5 +43,17 @@
 }
 
 .skill-bar {
-  transition: width 1s ease-out;
+  transition-property: width;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+}
+
+/* Added custom scrollbar styling */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
